--- a/scss/_menu2.scss
+++ b/scss/_menu2.scss
@@ -10,7 +10,7 @@
     li a{
         color: #7fffd4;
         font-weight: bold;
-        font-size: larger;
+        font-size: 1.2rem;
             &:hover{
                 color: rgb(224, 144, 239);
             }
