--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -147,6 +147,15 @@ body{
                         }
                     }
                 }
+                .footerInicio{
+                    .p-1{
+                        .menu2{
+                            margin: 10px;
+                            justify-content: space-between;
+                            font-size: 0.7rem;
+                        }
+                    }
+                }
             }
         }
      
