--- a/css/estilo.css
+++ b/css/estilo.css
@@ -91,7 +91,7 @@ body .footerInicio .sucursal .sucursal__ubi {
 }
 
 body .footerInicio .p-1 .menu2 {
-  width: 90%;
+  width: 20%;
   margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
@@ -104,18 +104,27 @@ body .footerInicio .p-1 .menu2 {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  background-color: #07353d;
-  opacity: 80%;
+  float: right;
 }
 
-body .footerInicio .p-1 .menu2 li a {
-  color: #7fffd4;
-  font-weight: bold;
-  font-size: 1.2rem;
+body .footerInicio .p-1 .menu2 .home {
+  width: 30px;
+  height: 25px;
 }
 
-body .footerInicio .p-1 .menu2 li a:hover {
-  color: #e090ef;
+body .footerInicio .p-1 .menu2 .facebook {
+  width: 30px;
+  height: 25px;
+}
+
+body .footerInicio .p-1 .menu2 .instagram {
+  width: 30px;
+  height: 25px;
+}
+
+body .footerInicio .p-1 .menu2 .contacto {
+  width: 30px;
+  height: 25px;
 }
 
 .ContenedorAbout {
@@ -148,7 +157,7 @@ body .footerInicio .p-1 .menu2 li a:hover {
 }
 
 .ContenedorAbout .Fabout .p-1 .menu2 {
-  width: 90%;
+  width: 20%;
   margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
@@ -161,18 +170,27 @@ body .footerInicio .p-1 .menu2 li a:hover {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  background-color: #07353d;
-  opacity: 80%;
+  float: right;
 }
 
-.ContenedorAbout .Fabout .p-1 .menu2 li a {
-  color: #7fffd4;
-  font-weight: bold;
-  font-size: 1.2rem;
+.ContenedorAbout .Fabout .p-1 .menu2 .home {
+  width: 30px;
+  height: 25px;
 }
 
-.ContenedorAbout .Fabout .p-1 .menu2 li a:hover {
-  color: #e090ef;
+.ContenedorAbout .Fabout .p-1 .menu2 .facebook {
+  width: 30px;
+  height: 25px;
+}
+
+.ContenedorAbout .Fabout .p-1 .menu2 .instagram {
+  width: 30px;
+  height: 25px;
+}
+
+.ContenedorAbout .Fabout .p-1 .menu2 .contacto {
+  width: 30px;
+  height: 25px;
 }
 
 .prodContainer {
@@ -215,7 +233,7 @@ body .footerInicio .p-1 .menu2 li a:hover {
 }
 
 .prodContainer .footerProd .p-1 .menu2 {
-  width: 90%;
+  width: 20%;
   margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
@@ -228,18 +246,27 @@ body .footerInicio .p-1 .menu2 li a:hover {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  background-color: #07353d;
-  opacity: 80%;
+  float: right;
 }
 
-.prodContainer .footerProd .p-1 .menu2 li a {
-  color: #7fffd4;
-  font-weight: bold;
-  font-size: 1.2rem;
+.prodContainer .footerProd .p-1 .menu2 .home {
+  width: 30px;
+  height: 25px;
 }
 
-.prodContainer .footerProd .p-1 .menu2 li a:hover {
-  color: #e090ef;
+.prodContainer .footerProd .p-1 .menu2 .facebook {
+  width: 30px;
+  height: 25px;
+}
+
+.prodContainer .footerProd .p-1 .menu2 .instagram {
+  width: 30px;
+  height: 25px;
+}
+
+.prodContainer .footerProd .p-1 .menu2 .contacto {
+  width: 30px;
+  height: 25px;
 }
 
 .contenedorcontacto {
@@ -281,7 +308,7 @@ body .footerInicio .p-1 .menu2 li a:hover {
 }
 
 .contenedorcontacto .footcontact .p-1 .menu2 {
-  width: 90%;
+  width: 20%;
   margin: 1rem auto;
   list-style: none;
   display: -webkit-box;
@@ -294,18 +321,27 @@ body .footerInicio .p-1 .menu2 li a:hover {
   -webkit-box-pack: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
-  background-color: #07353d;
-  opacity: 80%;
+  float: right;
 }
 
-.contenedorcontacto .footcontact .p-1 .menu2 li a {
-  color: #7fffd4;
-  font-weight: bold;
-  font-size: 1.2rem;
+.contenedorcontacto .footcontact .p-1 .menu2 .home {
+  width: 30px;
+  height: 25px;
 }
 
-.contenedorcontacto .footcontact .p-1 .menu2 li a:hover {
-  color: #e090ef;
+.contenedorcontacto .footcontact .p-1 .menu2 .facebook {
+  width: 30px;
+  height: 25px;
+}
+
+.contenedorcontacto .footcontact .p-1 .menu2 .instagram {
+  width: 30px;
+  height: 25px;
+}
+
+.contenedorcontacto .footcontact .p-1 .menu2 .contacto {
+  width: 30px;
+  height: 25px;
 }
 
 @media only screen and (max-width: 480px) {
@@ -322,10 +358,17 @@ body .footerInicio .p-1 .menu2 li a:hover {
   }
   .contenedorInicio .footerInicio .p-1 .menu2 {
     margin: 10px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
     font-size: 0.7rem;
+  }
+  .contenedorInicio .footerInicio .p-1 .menu2 .facebook {
+    width: 15px;
+    height: 15px;
   }
 }
 /*# sourceMappingURL=estilo.css.map */
