--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -151,8 +151,13 @@ body{
                     .p-1{
                         .menu2{
                             margin: 10px;
+                            display: flex;
                             justify-content: space-between;
                             font-size: 0.7rem;
+                            .facebook{
+                                width: 15px;
+                                height: 15px;
+                            }
                         }
                     }
                 }
