--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -150,10 +150,9 @@ body{
                 .footerInicio{
                     .p-1{
                         .menu2{
-                            margin: 10px;
+                            margin: 2rem;
                             display: flex;
                             justify-content: space-between;
-                            font-size: 0.7rem;
                             .facebook{
                                 width: 15px;
                                 height: 15px;
