--- a/scss/_menu2.scss
+++ b/scss/_menu2.scss
@@ -4,7 +4,7 @@
     list-style: none;
     display: flex;
     flex-direction:row;
-    justify-content: space-evenly;
+    justify-content: space-between;
     float: right;
     .home{
         width: 30px;
