--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -150,11 +150,8 @@ body{
                 .footerInicio{
                     .p-1{
                         .menu2{
-                            margin: 2rem;
-                            .facebook{
-                                width: 15px;
-                                height: 15px;
-                            }
+                            margin-right: 2rem;
+                            gap: 1.5rem;
                         }
                     }
                 }
