--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -51,6 +51,9 @@ body{
                             display: flex;
                             justify-content: space-around;
                             margin: 6rem auto;
+                                &:hover{
+                                    transform: scale(1.2,1.2);
+                                }
                         }
                     }
                     .p-1{
@@ -91,6 +94,9 @@ body{
                 .card{
                     color: navy;
                     text-align: center;
+                        &:hover{
+                            transform: scale(1.2,1.2);
+                        }
                     }
                 }
                 .productos2{
@@ -103,6 +109,9 @@ body{
                 .card{
                     color: navy;
                     text-align: center;
+                        &:hover{
+                            transform: scale(1.2,1.2);
+                        }
                     }
                 }
         .footerProd{
