--- a/scss/_menuinicial.scss
+++ b/scss/_menuinicial.scss
@@ -6,9 +6,23 @@
             .nav-item{
                 padding: 1rem;
                     &:hover{
-                        transform:rotate(15deg);
+                        transform: scale(1.2,1.2);
                         
                     }
             }
+        }
+        @media only screen and (max-width:480px){
+            navbar-expand-lg{
+                width: $ancho;
+                margin: 20px auto;
+                opacity: 85%;           
+                    .nav-item{
+                        padding: 1rem;
+                            &:hover{
+                                transform:none;
+                                
+                            }
+                    }
+                }
         }
     }
