--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -156,6 +156,7 @@ body{
                         .videonos{
                             width: 300px;
                             height: 200px;
+                            margin-bottom: 10vh
                         }
                     }
                 }
