--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -20,8 +20,19 @@ body{
                 @include menuinicial;  
             }
             .mainInicio{
+
                     .intro{
                         @extend .intro;
+                    }
+                    .tit__pack{
+                        width: 25rem;
+                        padding: 2rem;
+                        margin: 10px auto;
+                        text-align: center;
+                        color: rgb(31, 230, 236);
+                        background-color: #07353d;
+                        opacity: 85%;
+                        
                     }
                     .packs{
                         width: $ancho - 20;
@@ -50,9 +61,9 @@ body{
                         .sucursal__ubi{
                             display: flex;
                             justify-content: space-around;
-                            margin: 6rem auto;
+                            margin: 4rem auto;
                                 &:hover{
-                                    transform: scale(1.2,1.2);
+                                    transform: scale(1.1,1.1);
                                 }
                         }
                     }
@@ -156,7 +167,7 @@ body{
                         .videonos{
                             width: 300px;
                             height: 200px;
-                            margin-bottom: 25vh
+                            margin-bottom: 30vh
                         }
                     }
                 }
