--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -186,11 +186,13 @@ body{
             }
             .prodContainer{
                 .productos1{
+                    margin: 2rem auto;
                     display: flex;
                     flex-direction: column;
                     gap: 5rem;
                 }
                 .productos2{
+                    margin: 2rem auto;
                     display: flex;
                     flex-direction: column; 
                     gap: 5rem;
