--- a/css/estilo.css
+++ b/css/estilo.css
@@ -571,6 +571,7 @@ body .footerInicio .p-1 .menu2 .contacto:hover {
     float: none;
   }
   .prodContainer .productos1 {
+    margin: 2rem auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -581,6 +582,7 @@ body .footerInicio .p-1 .menu2 .contacto:hover {
     gap: 5rem;
   }
   .prodContainer .productos2 {
+    margin: 2rem auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
