--- a/css/estilo.css
+++ b/css/estilo.css
@@ -566,7 +566,7 @@ body .footerInicio .p-1 .menu2 .contacto:hover {
   .contenedorInicio .mainInicio .tit__pack {
     width: 90%;
   }
-  .contenedorInicio .footerInicio .sucursal {
+  .contenedorInicio .footerInicio .sucursal .tit__suc {
     width: 90%;
   }
   .contenedorInicio .footerInicio .p-1 .menu2 {
